Fix nav height
Got messed up when email banner was moved to the bottom

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ nav li ul li {
 }
 /* First section, only if it's not a jumbotron */
 body > section:first-of-type {
-    margin-top: 80px;
+    margin-top: 50px;
 }
 section {
     padding: 10px 30px;
